<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/party_title_text_size"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/party_title_default"
            android:textColor="@color/primary_hard"
            android:id="@+id/fullscreen_party_item_title" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullscreen_party_item_title"
            android:id="@+id/fullscreen_party_item_layout_readable_loc">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/party_desc_text_size"
                android:text="@string/party_loc_default"
                android:layout_alignParentLeft="true"
                android:textColor="@color/secondary_hard"
                android:gravity="center_vertical"
                android:id="@+id/fullscreen_party_item_readable_loc" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_define_location"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/party_desc_text_size"
            android:text="@string/party_desc_default"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fullscreen_party_item_layout_readable_loc"
            android:id="@+id/fullscreen_party_item_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/party_desc_text_size"
            android:text="@string/party_desc_default"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fullscreen_party_item_desc"
            android:id="@+id/fullscreen_party_item_starts_at"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/party_desc_text_size"
            android:text="@string/party_desc_default"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fullscreen_party_item_starts_at"
            android:id="@+id/fullscreen_party_item_ends_at"/>

    </RelativeLayout>

</ScrollView>